@startuml
!theme reddress-darkgreen

class pumlFromJava.diagrams.PumlACD implements pumlFromJava.diagrams.PumlDiagram

class pumlFromJava.diagrams.PumlBasis implements pumlFromJava.diagrams.PumlDiagram

class pumlFromJava.diagrams.PumlCCD implements pumlFromJava.diagrams.PumlDiagram

interface pumlFromJava.diagrams.PumlDiagram
class pumlFromJava.doclets.FirstDoclet

class pumlFromJava.doclets.PumlDoclet

class pumlFromJava.doclets.options.OutOption {
NameFile

}

class pumlFromJava.doclets.options.PathOption {
path

}

class pumlFromJava.doclets.options.TypeOption {
type

}

class pumlFromJava.generators.Help

class pumlFromJava.generators.Java2Puml

interface pumlFromJava.translators.elements.objects.InheritableObject
interface pumlFromJava.translators.elements.objects.NameableElement
interface pumlFromJava.translators.elements.objects.ObjectTranslator extends pumlFromJava.translators.elements.objects.PumlRawObject, pumlFromJava.translators.elements.objects.NameableElement
class pumlFromJava.translators.elements.objects.PumlEnum extends pumlFromJava.translators.elements.objects.PumlObject

class pumlFromJava.translators.elements.objects.PumlInterface extends pumlFromJava.translators.elements.objects.PumlObject implements pumlFromJava.translators.elements.objects.InheritableObject

abstract pumlFromJava.translators.elements.objects.PumlObject implements pumlFromJava.translators.elements.objects.ObjectTranslator

interface pumlFromJava.translators.elements.objects.PumlRawObject
class pumlFromJava.translators.elements.objects.internals.PumlConstructor extends pumlFromJava.translators.elements.objects.internals.PumlRawMethod

class pumlFromJava.translators.elements.objects.internals.PumlField extends pumlFromJava.translators.elements.objects.internals.PumlInternal

abstract pumlFromJava.translators.elements.objects.internals.PumlInternal implements pumlFromJava.translators.elements.objects.internals.RawInternal

class pumlFromJava.translators.elements.objects.internals.PumlMethod extends pumlFromJava.translators.elements.objects.internals.PumlRawMethod

abstract pumlFromJava.translators.elements.objects.internals.PumlRawMethod extends pumlFromJava.translators.elements.objects.internals.PumlInternal

class pumlFromJava.translators.elements.objects.internals.PumlType

interface pumlFromJava.translators.elements.objects.internals.RawInternal
class pumlFromJava.translators.elements.objects.pumlClasses.PumlClass extends pumlFromJava.translators.elements.objects.pumlClasses.PumlClasses

abstract pumlFromJava.translators.elements.objects.pumlClasses.PumlClasses extends pumlFromJava.translators.elements.objects.PumlObject implements pumlFromJava.translators.elements.objects.InheritableObject, pumlFromJava.translators.elements.relations.RelationableObject

class pumlFromJava.translators.elements.objects.pumlClasses.PumlLiteClass extends pumlFromJava.translators.elements.objects.pumlClasses.PumlClasses

class pumlFromJava.translators.elements.objects.viewers.AnnotationsViewer implements pumlFromJava.translators.elements.objects.PumlRawObject

class pumlFromJava.translators.elements.objects.viewers.ModifiersViewer implements pumlFromJava.translators.elements.objects.PumlRawObject

class pumlFromJava.translators.elements.objects.viewers.VisibilityViewer implements pumlFromJava.translators.elements.objects.PumlRawObject

class pumlFromJava.translators.elements.relations.PumlArrow {
arrow

}

enum pumlFromJava.translators.elements.relations.PumlArrowLook {
DOTTED
SOLID
HEADFULL_SOLID
HEADFULL_DOTTED
HEADSOCKET_SOLID
HEADSOCKET_DOTTED
DIAMOND_EMPTY
DIAMOND_FULL

}
interface pumlFromJava.translators.elements.relations.RelationableObject
class pumlFromJava.translators.elements.tools.TranslatorTools

class pumlFromJava.translators.marker.Marker

class pumlFromJava.writers.Writer implements pumlFromJava.writers.WriterSpecies {
filepath

}

interface pumlFromJava.writers.WriterSpecies
pumlFromJava.doclets.options.PathOption -- PumlDoclet : <<Use>>
pumlFromJava.doclets.options.OutOption -- PumlDoclet : <<Use>>
pumlFromJava.doclets.options.TypeOption -- PumlDoclet : <<Use>>
pumlFromJava.translators.elements.objects.viewers.VisibilityViewer -- PumlInternal : <<Use>>
pumlFromJava.translators.elements.objects.viewers.ModifiersViewer -- PumlInternal : <<Use>>
pumlFromJava.translators.elements.objects.viewers.ModifiersViewer -- PumlClasses : <<Use>>
pumlFromJava.translators.elements.objects.viewers.AnnotationsViewer -- PumlClasses : <<Use>>
pumlFromJava.translators.elements.relations.PumlArrowLook -- PumlArrow : <<Use>>

@enduml

